gccida/g2/check_asm_operands
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_operands/src/recog.c:631:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v11] & 4) != 0 && !v10[1] ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_operands/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_operands/src/obj/recog.o] Error 1
